--- a/package.json
+++ b/package.json
@@ -8,12 +8,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-splash-screen": "^0.8.1",
     "expo-status-bar": "~1.0.3",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-awesome-alerts": "^1.4.2",
+    "react-native-elements": "^3.1.0",
+    "react-native-flash-message": "^0.1.21",
+    "react-native-form-validator": "^0.3.5",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-maps": "0.27.1",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
