--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-asset": "~8.2.1",
+    "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
-    "expo-splash-screen": "^0.8.1",
+    "expo-location": "~10.0.0",
+    "expo-permissions": "~10.0.0",
+    "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
+    "geolib": "^3.3.1",
+    "location": "^0.0.1",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
