--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-asset": "~8.2.1",
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
+    "expo-linking": "~2.0.0",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
     "expo-splash-screen": "~0.8.1",
